# trust-builder

./: .flutter-plugins-dependencies  .gitignore  .replit  README.md  firebase.json  package-lock.json  package.json  pubspec.yaml  replit.md  serve_web.dart  test_username_login.js
.codesandbox/: tasks.json
android/: build.gradle
android/app/: build.gradle  google-services.json
attached_assets/: Pasted--Trust-OS-User-Stories-1-Login-and-Registration-File-Ev_1771779291037.txt  Pasted--workspace-git-push-Enumerating-objects-3654-done-Count_1771861572606.txt
backend/: Cargo.toml
backend/src/: alerts.rs  auth.rs  db.rs  main.rs  models.rs  requests.rs  trust.rs
docs/: product_backlog.md  replit.md  trust_os_user_stories.md
ios/Flutter/: flutter_export_environment.sh
ios/Runner/: Info.plist
lib/: firebase_options.dart  main.dart
lib/models/: alert_model.dart  network_node_model.dart  request_model.dart
lib/screens/: alerts_screen.dart  configure_screen.dart  create_request_screen.dart  home_screen.dart  login_screen.dart  main_shell.dart  network_screen.dart  notifications_screen.dart  personal_info_screen.dart  register_screen.dart  reports_screen.dart  request_detail_screen.dart  roster_screen.dart  settings_screen.dart  user_profile_screen.dart  verify_email_screen.dart
lib/services/: alerts_service.dart  api_client.dart  api_service.dart  auth_service.dart  local_storage_service.dart  mock_data.dart  network_service.dart  (+4 more)
scripts/: capture_screenshots.js  debug_login.js  parse_debug.js  server.js  test_load.js  user_login_test.js
web/: index.html
(+3 files in other folders)
